--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,9 @@ input::-webkit-inner-spin-button {
 
 input[type="number"] {
 	-moz-appearance: textfield;
+	appearance: textfield;
+}
+
+*::selection {
+	background: #ffc857;
 }
